--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/donnut/howru/issues"
   },
-  "homepage": "https://github.com/donnut/howru#readme"
+  "homepage": "https://github.com/donnut/howru#readme",
+  "devDependencies": {
+    "assert": "^1.3.0",
+    "mocha": "^2.4.5"
+  }
 }
