--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/donnut/howru#readme",
   "devDependencies": {
     "assert": "^1.3.0",
+    "async": "^2.0.0-rc.5",
     "mocha": "^2.4.5"
   }
 }
